1999-04-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* misc.h: Catch the case that jmalloc.h (from Kaffe) was included
	before misc.h.

1999-03-04  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* avl.c: Include swarmconfig.h instead of config.h

	* avl.h: Add new file.

	* avl.c: Add new file.
	
	* Makefile.am (SRC): Add avl.c from libavl to SRC variable.
	(misc_HEADERS): Add avl.h from libavl to misc_HEADERS variable.

1999-03-04  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* misc.h: If HAVE_REALPATH is not defined, avoid declaring
	it in stdlib.h, since it will be redeclared later.  This is
	necessary with Checker.

	* find_executable.c: Don't include unistd.h, errno.h, sys/types.h,
	sys/stat.h, stdlib.h, or stdio.h.

	* argp-parse.c: Don't include stdlib.h, string.h, or unistd.h.

	* argp-help.c: Don't include stddef.h, stdlib.h, string.h, stdarg.h,
	or ctype.h.

	* argp-fmtstream.c: Don't include stdlib.h, string.h, errno.h, 
	stdarg.h, or ctype.h.

1999-02-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (REVISION): Bump.  Version 1.4.1.

1999-01-25  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* getopt.c, realpath.c: Use __CYGWIN__ instead of __CYGWIN32__.

1999-01-20  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am (REVISION): Bump.

1998-12-21  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* misc.h: Include stdio.h, stdarg.h, and math.h.

1998-11-16  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* misc.h: Include ctype.h.

1998-11-13  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* misc.h: Include errno.h.

1998-11-10  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* misc.h: Only define gettimeofday if Cygwin is before B20.

1998-10-21  Marcus G. Daniels  <mgd@sangre.santafe.edu>

	* dropdir.c (dropdir): Return NULL if passed as an argument.

1998-10-10  Marcus G. Daniels  <mgd@sangre.santafe.edu>

	* Makefile.am (CURRENT,AGE): Increment. Swarm 1.3.1 released.

	* Makefile.am (SRC): Add dropdir.c.
